{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 15,
  "lineage": "985b51fb-4742-1c53-8308-ec601b14007e",
  "resources": [
    {
      "module": "module.vpc_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "module.vpc_ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-078772dab3242ee11",
            "arn": "arn:aws:ec2:ap-southeast-2:464443948122:instance/i-07f3d8366fac41a5a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f3d8366fac41a5a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sidacmtest",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a3e4bb2a85f0ba52",
            "private_dns": "ip-10-0-3-16.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.16",
            "region": "ap-southeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03ebd270100665613",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0639fb010a2951e37",
            "tags": {
              "Name": "private-instance-1"
            },
            "tags_all": {
              "Name": "private-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-031fadc15c1d12f4c"
            ]
          },
          "dependencies": [
            "module.vpc_ec2.aws_security_group.allow_ssh",
            "module.vpc_ec2.aws_subnet.private",
            "module.vpc_ec2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-078772dab3242ee11",
            "arn": "arn:aws:ec2:ap-southeast-2:464443948122:instance/i-0fab7d58cf17c2b6c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fab7d58cf17c2b6c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sidacmtest",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f0c97fe9547ae700",
            "private_dns": "ip-10-0-4-126.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.126",
            "region": "ap-southeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-034f9f3ad50cb28e9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07763ff8b6401481c",
            "tags": {
              "Name": "private-instance-2"
            },
            "tags_all": {
              "Name": "private-instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-031fadc15c1d12f4c"
            ]
          },
          "dependencies": [
            "module.vpc_ec2.aws_security_group.allow_ssh",
            "module.vpc_ec2.aws_subnet.private",
            "module.vpc_ec2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "module.vpc_ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-078772dab3242ee11",
            "arn": "arn:aws:ec2:ap-southeast-2:464443948122:instance/i-0f461e822bd833fed",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f461e822bd833fed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sidacmtest",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-052aabd2a92d0c814",
            "private_dns": "ip-10-0-1-169.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.169",
            "public_dns": "ec2-3-106-222-125.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.106.222.125",
            "region": "ap-southeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d4835787fd0de90b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce5869e4617a0d26",
            "tags": {
              "Name": "public-instance-1"
            },
            "tags_all": {
              "Name": "public-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-031fadc15c1d12f4c"
            ]
          },
          "dependencies": [
            "module.vpc_ec2.aws_security_group.allow_ssh",
            "module.vpc_ec2.aws_subnet.public",
            "module.vpc_ec2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-078772dab3242ee11",
            "arn": "arn:aws:ec2:ap-southeast-2:464443948122:instance/i-0e134dbfadc4db434",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e134dbfadc4db434",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sidacmtest",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-021b3dbd545f19f98",
            "private_dns": "ip-10-0-2-4.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.4",
            "public_dns": "ec2-13-210-12-149.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.210.12.149",
            "region": "ap-southeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b8ff1c4c7eadbbe7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5cc88c65c6576d0",
            "tags": {
              "Name": "public-instance-2"
            },
            "tags_all": {
              "Name": "public-instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-031fadc15c1d12f4c"
            ]
          },
          "dependencies": [
            "module.vpc_ec2.aws_security_group.allow_ssh",
            "module.vpc_ec2.aws_subnet.public",
            "module.vpc_ec2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ec2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc_ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:464443948122:internet-gateway/igw-07999cc4e10bb16e5",
            "id": "igw-07999cc4e10bb16e5",
            "owner_id": "464443948122",
            "region": "ap-southeast-2",
            "vpc_id": "vpc-0881ccf68cd730876"
          },
          "dependencies": [
            "module.vpc_ec2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ec2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc_ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:464443948122:route-table/rtb-08f2eb9156438fcf0",
            "id": "rtb-08f2eb9156438fcf0",
            "owner_id": "464443948122",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07999cc4e10bb16e5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0881ccf68cd730876"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ec2.aws_internet_gateway.igw",
            "module.vpc_ec2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ec2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc_ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f10aad9d4339d30b",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-08f2eb9156438fcf0",
            "subnet_id": "subnet-0ce5869e4617a0d26"
          },
          "dependencies": [
            "module.vpc_ec2.aws_internet_gateway.igw",
            "module.vpc_ec2.aws_route_table.public",
            "module.vpc_ec2.aws_subnet.public",
            "module.vpc_ec2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096a61d8dfe6a1ed1",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-08f2eb9156438fcf0",
            "subnet_id": "subnet-0b5cc88c65c6576d0"
          },
          "dependencies": [
            "module.vpc_ec2.aws_internet_gateway.igw",
            "module.vpc_ec2.aws_route_table.public",
            "module.vpc_ec2.aws_subnet.public",
            "module.vpc_ec2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "module.vpc_ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:464443948122:security-group/sg-031fadc15c1d12f4c",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031fadc15c1d12f4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "464443948122",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0881ccf68cd730876"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ec2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ec2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc_ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:464443948122:subnet/subnet-0639fb010a2951e37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0639fb010a2951e37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "464443948122",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0881ccf68cd730876"
          },
          "dependencies": [
            "module.vpc_ec2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:464443948122:subnet/subnet-07763ff8b6401481c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07763ff8b6401481c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "464443948122",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0881ccf68cd730876"
          },
          "dependencies": [
            "module.vpc_ec2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ec2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc_ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:464443948122:subnet/subnet-0ce5869e4617a0d26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce5869e4617a0d26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "464443948122",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0881ccf68cd730876"
          },
          "dependencies": [
            "module.vpc_ec2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:464443948122:subnet/subnet-0b5cc88c65c6576d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5cc88c65c6576d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "464443948122",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0881ccf68cd730876"
          },
          "dependencies": [
            "module.vpc_ec2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ec2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc_ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:464443948122:vpc/vpc-0881ccf68cd730876",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-045f902b69e672f81",
            "default_route_table_id": "rtb-0255b7bd99ee0794b",
            "default_security_group_id": "sg-09bf233023f747aef",
            "dhcp_options_id": "dopt-3dbfe25a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0881ccf68cd730876",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0255b7bd99ee0794b",
            "owner_id": "464443948122",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "example-vpc"
            },
            "tags_all": {
              "Name": "example-vpc"
            }
          }
        }
      ]
    }
  ]
}